# llm-from-scratch

./: .gitignore  gpu-vs-cpu.ipynb  pyproject.toml  requirements.txt  simple-tokens.ipynb  torch-examples.ipynb  useful-torch-functions.ipynb
