[tool.poetry]
name = "llm-from-scratch"
version = "0.1.0"
description = "A project to learn how LLMs work"
authors = ["Tom McKenna <tom2mckenna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
pylzma = "^0.5.0"
ipykernel = "^6.27.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
